--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
                 <div class="modal-body">
                     <form class="mt-3  ">
                         <select class="form-select" aria-label="Default select example">
-                            <option selected>Select Time Zone</option>
+                            <!-- <option selected>Select Time Zone</option> -->
+                            <option value="Asia/Kolkata" selected>Asia/Kolkata</option>
                             <option value="Africa/Kampala">Africa/Kampala</option>
                             <!-- <option value="America/Argentina/Buenos_Aires">America/Argentina/Buenos_Aires</option> -->
                             <option value="America/Costa_Rica">America/Costa_Rica</option>
                             <option value="America/New_York">America/New_York</option>
                             <option value="Antarctica/South_Pole">Antarctica/South_Pole</option>
                             <option value="Asia/Hong_Kong">Asia/Hong_Kong</option>
-                            <option value="Asia/Kolkata">Asia/Kolkata</option>
+                            
                             <!-- <option value="Asia/Qatar">Asia/Qatar</option> -->
                             <option value="Australia/Sydney">Australia/Sydney</option>
                             <option value="Europe/Amsterdam">Europe/Amsterdam</option>
@@ -57,7 +58,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                <button id="selectedLoc" type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="selectTZ()">Save changes</button>
+                <button id="selectedLoc" type="button" class="btn btn-gradient" data-bs-dismiss="modal" onclick="selectTZ()">Save changes</button>
                 </div>
             </div>
             </div>
