Changed Button Name on Modal

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                <button id="selectedLoc" type="button" class="btn btn-gradient" data-bs-dismiss="modal" onclick="selectTZ()">Save changes</button>
+                <button id="selectedLoc" type="button" class="btn btn-gradient" data-bs-dismiss="modal" onclick="selectTZ()">Select</button>
                 </div>
             </div>
             </div>
