Day and Night Styling

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="displayContent">
-            <div class="displayTime container text-center text-light mt-5 border rounded-5 p-4">
+            <!-- <div class="displayTime container text-center text-light mt-5 border rounded-5 p-4">
                 <h1 class="timeNow mb-5 mt-5">10:10:10 AM</h1>
             </div>
                 <div class="mt-5 other">
@@ -73,7 +73,7 @@
                     <h1 class="">Timezone: India/Kolkata</h1>
                     <h1 class="">Date: 01/01/2023</h1>
                     <h1 class="">Day: Friday</h1>
-                </div>
+                </div> -->
         </div>
     </div>
   </body>
