Day and Night Styling

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <div class="displayContent">
+        <div class="displayContent p-5">
             <!-- <div class="displayTime container text-center text-light mt-5 border rounded-5 p-4">
                 <h1 class="timeNow mb-5 mt-5">10:10:10 AM</h1>
             </div>
