--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     ></script>
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body>
-    <div class="content text-center p-3">
+  <body class="content text-center p-3">
+    
       <h1 class="title"><i class="fa-solid fa-globe me-2"></i>World Clock</h1>
       <!-- <button class="rounded-5" id="selectTZ" onclick="addLocation()">Change Time Zone</button> -->
       <!-- Button trigger modal -->
@@ -104,7 +104,7 @@
                     <h1 class="">Day: Friday</h1>
                 </div> -->
       </div>
-    </div>
+    
   </body>
   <script src="./script/script.js"></script>
 </html>
