Corrected negative GMT

--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
                   <option value="Africa/Kampala">Africa/Kampala</option>
                   <!-- <option value="America/Argentina/Buenos_Aires">America/Argentina/Buenos_Aires</option> -->
                   <option value="America/Costa_Rica">America/Costa_Rica</option>
+                  <option value="America/Toronto">America/Toronto</option>
                   <option value="America/New_York">America/New_York</option>
                   <!-- <option value="Antarctica/South_Pole">Antarctica/South_Pole</option> -->
                   <option value="Asia/Hong_Kong">Asia/Hong_Kong</option>
 
                   <!-- <option value="Asia/Qatar">Asia/Qatar</option> -->
                   <option value="Australia/Sydney">Australia/Sydney</option>
+                  
                   <option value="Europe/Amsterdam">Europe/Amsterdam</option>
                 </select>
               </form>
